# zirgen-to-llzk

./: .bazelrc.local  .clangd  .envrc  .gitignore  .gitmodules  0__overview_8md.html  1__setup_8md.html  2__tools_8md.html  3__code__of__conduct_8md.html  4__contributing_8md.html  5__dialects_8md.html  6__license_8md.html  BUILD.bazel  CMakeLists.txt  Dependencies.cmake  MODULE.bazel  ProjectOptions.cmake  README.md  WORKSPACE  _analysis_8cpp.html  _analysis_8cpp.js  _analysis_8cpp__incl.map  _analysis_8cpp__incl.md5  _analysis_8cpp_source.html  _analysis_8h.html  _analysis_8h.js  _analysis_8h__dep__incl.map  _analysis_8h__dep__incl.md5  _analysis_8h__incl.map  _analysis_8h__incl.md5  _analysis_8h_source.html  _array_frame_8h.html  _array_frame_8h.js  _array_frame_8h__dep__incl.map  _array_frame_8h__dep__incl.md5  _array_frame_8h__incl.map  _array_frame_8h__incl.md5  _array_frame_8h_source.html  _attrs_8cpp_8inc.html  _attrs_8cpp_8inc__dep__incl.map  (+3382 more)
ZirToZkir/Dialect/ZHL/Typing/: Analysis.cpp  Analysis.h  BUILD.bazel  OpBindings.cpp  OpBindings.h  PassDetail.h  Passes.td  PrintTypeBindings.cpp  Rules.cpp  Rules.h  Scope.cpp  Scope.h  TypeBindings.cpp  TypeBindings.h  Typing.cpp  Typing.h
ZirToZkir/Dialect/ZMIR/IR/: Attrs.h  Attrs.td  BUILD.bazel  Builder.cpp  Builder.h  Dialect.cpp  Dialect.h  Dialect.td  OpInterfaces.h  OpInterfaces.td  Ops.cpp  Ops.h  Ops.td  Types.cpp  Types.h  Types.td
ZirToZkir/Dialect/ZMIR/Transforms/: BUILD.bazel  ExpandSuperCoercion.cpp  InjectBuiltIns.cpp  InsertTemporaries.cpp  LegalizeTypes.cpp  LowerBuiltIns.cpp  PassDetail.h  Passes.h  Passes.td  RemoveBuiltIns.cpp  RemoveIllegalOps.cpp  SplitComponentBody.cpp
ZirToZkir/Dialect/ZMIR/Typing/: BUILD.bazel  Materialize.cpp  Materialize.h  ZMIRTypeConverter.cpp  ZMIRTypeConverter.h
ZirToZkir/Passes/: BUILD.bazel  PassDetail.h  Passes.h  Passes.td  StripDirectives.cpp  StripTests.cpp  ZmirPropagateTypes.cpp
ZirToZkir/Passes/ConvertZhlToZmir/: BUILD.bazel  Helpers.cpp  Helpers.h  Pass.cpp  Pass.h  Patterns.cpp  Patterns.h  ZMIRTypeConverter.cpp
ZirToZkir/Passes/ConvertZmirToLlzk/: BUILD.bazel  LLZKTypeConverter.cpp  Pass.cpp  Pass.h  Patterns.cpp  Patterns.h
ZirToZkir/Passes/ConvertZmirToZkir/: BUILD.bazel  Pass.cpp  Pass.h  Patterns.cpp  Patterns.h  ZKIRTypeConverter.cpp  ZKIRTypeConverter.h
ZirToZkir/tools/: BUILD.bazel  zkc-opt.cpp
include/: CMakeLists.txt
include/zklang/Dialect/LLZK/: Builder.h
include/zklang/Dialect/ZHL/: ZhlOpConversionPattern.h
include/zklang/FiniteFields/: BabyBear.h  Field.h
include/zklang/Frontends/ZIR/: Driver.h
include/zklang/LanguageSupport/ZIR/: BackVariables.h
include/zklang/Passes/: CMakeLists.txt  PassDetail.h  Passes.h  Passes.td
include/zklang/Passes/ConvertZhlToLlzkFelt/: Patterns.h
include/zklang/Passes/ConvertZhlToLlzkStruct/: Patterns.h
include/zklang/Passes/ConvertZhlToScp/: Patterns.h
include/zklang/Passes/ConvertZhlToZml/: Helpers.h  Pass.h  Patterns.h
include/zklang/Passes/ConvertZmlToLlzk/: LLZKTypeConverter.h  Pass.h  Patterns.h
include/zklang/Support/: COW.h  CopyablePointer.h
lib/: CMakeLists.txt
lib/Dialect/: CMakeLists.txt
lib/Dialect/LLZK/: Builder.cpp  CMakeLists.txt  LLZKTypeConverter.cpp
lib/Dialect/ZHL/Typing/: Analysis.cpp  CMakeLists.txt  Expr.cpp  Frame.cpp  Interpreter.cpp  OpBindings.cpp  Params.cpp  PrintTypeBindings.cpp  Rules.cpp  Scope.cpp  TypeBinding.cpp  TypeBindingName.cpp  TypeBindingSpecialization.cpp  TypeBindings.cpp  Typing.cpp
lib/Dialect/ZML/: BackVariables.cpp  CMakeLists.txt  Helpers.cpp
lib/Dialect/ZML/BuiltIns/: BuiltIns.cpp  CMakeLists.txt
lib/Dialect/ZML/ExtVal/: BabyBear.cpp  CMakeLists.txt  Conversion.cpp  Patterns.cpp
lib/Dialect/ZML/IR/: Builder.cpp  CMakeLists.txt  Dialect.cpp  LLZKExtensions.cpp  Ops.cpp  TypeInterfaces.cpp  Types.cpp
lib/Dialect/ZML/Transforms/: CMakeLists.txt  InjectBuiltIns.cpp  InsertTemporaries.cpp  LegalizeTypes.cpp  LowerBuiltIns.cpp  LowerExtValOps.cpp  RemoveBuiltIns.cpp  RemoveIllegalOps.cpp  SplitComponentBody.cpp
lib/Dialect/ZML/Typing/: Annotations.cpp  CMakeLists.txt  Materialize.cpp  ZMIRTypeConverter.cpp  ZMLTypeConverter.cpp
lib/Frontends/: CMakeLists.txt
lib/Frontends/ZIR/: CMakeLists.txt  Driver.cpp
lib/LanguageSupport/ZIR/: BackVariables.cpp  CMakeLists.txt
lib/Passes/: AnnotateTypecheckZhl.cpp  CMakeLists.txt  InstantiatePODBlocks.cpp  StripDirectives.cpp  StripTests.cpp  TypecheckZhl.cpp
lib/Passes/ConvertZhlToLlzkFelt/: Pass.cpp  Patterns.cpp
lib/Passes/ConvertZhlToLlzkStruct/: Pass.cpp  Patterns.cpp
lib/Passes/ConvertZhlToScp/: Patterns.cpp
lib/Passes/ConvertZhlToZml/: CMakeLists.txt  Helpers.cpp  Pass.cpp  Patterns.cpp
lib/Passes/ConvertZmlToLlzk/: CMakeLists.txt  LLZKTypeConverter.cpp  Pass.cpp  Patterns.cpp
tests/: CMakeLists.txt
tests/lit/: BUILD.bazel  CMakeLists.txt  lit.cfg  lit.cfg.py  lit.site.cfg.py.in
tests/lit/zir/: BUILD.bazel  array-of-array-super-coerce.zir  array-of-arrays-param.zir  array-of-arrays.zir  array-of-arrays2.zir  array-super-coerce-affine-2.zir  array-super-coerce-affine-3.zir  array-super-coerce-affine.zir  array-super-coerce.zir  constraints-of-parametric-values.zir  empty.zir  empty.zir.mlir  formals_position_not_adjusted_to_scope.zir  frame-overwrite.zir  generate_super_coerce_when_deduced_subtype_of_expected_type.zir  if-then-else.zir  inherited_member.zir  init0.zir  lookup.zir  loops.zir  member_array.zir  missing_const_value.zir  name-clash.zir  override.zir  params_test.zir  po2.zir  read-array-arg.zir  read-array-arg2.zir  read-array-arg3.zir  reduce.zir  subscript.zir  two-affine-maps.zir  unpack-non-known-const.zir  unpack-with-useless-middle-param.zir  unpack.zir  wrong_param_usage.zir
tests/lit/zir/back-variables/: test-cexpr.zir  test-literal.zir  test-symbol.zir  test1.zir  (+1 more)
tests/unittests/: CMakeLists.txt
tests/unittests/ZHL/: CMakeLists.txt  TypingTests.cpp
tests/unittests/hello/: CMakeLists.txt
tools/shared/: CMakeLists.txt  config.cpp  version.h.in
tools/zklang/: CMakeLists.txt  main.cpp
tools/zklang-opt/: CMakeLists.txt  main.cpp
(+314 files in other folders)
