load("@rules_foreign_cc//foreign_cc:defs.bzl", "cmake")

package(
    default_visibility = ["//visibility:public"],
)

alias(
    name = "lit_cfg",
    actual = "@zirgen//:lit_cfg",
)

alias(
    name = "lit_utils",
    actual = "@zirgen//:lit_utils",
)

alias(
  name = "zirgen",
  actual = "@zirgen//zirgen/dsl:zirgen"
)

cmake(
    name = "libllzk",
    cache_entries = {
      "BUILD_TESTING": "OFF"
        # "CMAKE_C_FLAGS": "-fPIC",
    },
    generate_args = ["-GNinja"],
    lib_source = "@llzk-lib//:all_srcs",
    out_static_libs = ["libLLZKDialect.a"],
)

cc_library(
  name = "llzk",
  deps = [
    "//:libllzk",
    "@llvm-project//llvm:Support"
  ]
)
