###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

module(name = "zir-to-zkir", repo_name = "com_veridise_zir-to-zkir")

bazel_dep(name = "rules_foreign_cc", version = "0.12.0")
