load("@llvm-project//mlir:tblgen.bzl", "gentbl_cc_library", "td_library")

package(
    default_visibility = ["//visibility:public"],
)

td_library(
    name = "PassesTdFiles",
    srcs = ["Passes.td"],
    deps = [
        "@llvm-project//mlir:OpBaseTdFiles",
        "@llvm-project//mlir:RewritePassBaseTdFiles",
    ],
)

gentbl_cc_library(
    name = "PassesIncGen",
    tbl_outs = [
        (
            ["-gen-pass-decls"],
            "Passes.inc.h",
        ),
    ],
    tblgen = "@llvm-project//mlir:mlir-tblgen",
    td_file = ":Passes.td",
    deps = [
        ":PassesTdFiles",
        "@llvm-project//mlir:PassBaseTdFiles",
    ],
)

cc_library(
  name = "PassDetail",
  srcs = [],
  hdrs = ["PassDetail.h"],
  deps = [
        ":PassesIncGen",
        "//:zkir",
  ]
)

cc_library(
    name = "passes",
    srcs = [
      "StripTests.cpp",
      "StripDirectives.cpp",
      #"ZmirPropagateTypes.cpp"
    ],
    hdrs = [
        "Passes.h",
    ],
    deps = [
        ":PassesIncGen",
        ":PassDetail",
        "@zirgen//zirgen/Dialect/ZHL/IR",
        "//ZirToZkir/Dialect/ZMIR/IR",  
        "//ZirToZkir/Passes/ConvertZhlToZmir",  
        "//ZirToZkir/Passes/ConvertZmirToZkir",  
        "//:zkir",
        "@llvm-project//mlir:FuncDialect",
        "@llvm-project//mlir:SCFDialect",
        "@llvm-project//mlir:IndexDialect",
        "@llvm-project//mlir:Transforms",
        "@llvm-project//mlir:Analysis"
    ],
)
