package(
    default_visibility = ["//visibility:public"],
)

cc_binary(
    name = "zkc-opt",
    srcs = ["zkc-opt.cpp"],
    deps = [
      "@zirgen//zirgen/Dialect/ZHL/IR",
      "//ZirToZkir/Dialect/ZMIR/IR",  
      "//ZirToZkir/Dialect/ZMIR/Transforms:passes",  
      "//ZirToZkir/Dialect/ZHL/Typing:passes",  
      "//ZirToZkir/Passes:passes",  
      "@llvm-project//mlir:MlirOptLib",
      "@llvm-project//mlir:ReconcileUnrealizedCasts",
      "//:zkir"
    ],
)
