package(
    default_visibility = ["//visibility:public"],
)

cc_library(
  name = "ConvertZmirToLlzk",
  srcs = [
    "Patterns.cpp",
    "Patterns.h",
    "LLZKTypeConverter.h",
    "LLZKTypeConverter.cpp",
    "Pass.cpp",
    "Helpers.h",
    "Helpers.cpp",
  ],
  hdrs = [
    "Pass.h"
  ],
  deps = [
        "//ZirToZkir/Dialect/ZMIR/IR",  
        "//:llzk",
        "//ZirToZkir/Passes:PassDetail",  
        "@llvm-project//mlir:FuncDialect",
        "@llvm-project//mlir:SCFDialect",
        "@llvm-project//mlir:IndexDialect",
        "@llvm-project//mlir:Transforms"
  ]
)
