package(
    default_visibility = ["//visibility:public"],
)

cc_library(
  name = "ConvertZmirToZkir",
  srcs = [
    "Patterns.cpp",
    "Patterns.h",
    "ZKIRTypeConverter.h",
    "ZKIRTypeConverter.cpp",
    "Pass.cpp",
    "Helpers.h",
    "Helpers.cpp",
  ],
  hdrs = [
    "Pass.h"
  ],
  deps = [
        "//ZirToZkir/Dialect/ZMIR/IR",  
        "//:zkir",
        "//ZirToZkir/Passes:PassDetail",  
        "@llvm-project//mlir:FuncDialect",
        "@llvm-project//mlir:SCFDialect",
        "@llvm-project//mlir:IndexDialect",
        "@llvm-project//mlir:Transforms"
  ]
)
