load("@llvm-project//mlir:tblgen.bzl", "gentbl_cc_library", "td_library")

package(
    default_visibility = ["//visibility:public"],
)

td_library(
    name = "TdFiles",
    srcs = [
      "Attrs.td",
      "Dialect.td",
      "Ops.td",
      "Types.td",
    ],
    deps = [
        "@llvm-project//mlir:ControlFlowInterfacesTdFiles",
        "@llvm-project//mlir:InferTypeOpInterfaceTdFiles",
        "@llvm-project//mlir:FunctionInterfacesTdFiles",
        "@llvm-project//mlir:OpBaseTdFiles",
        "@llvm-project//mlir:SideEffectInterfacesTdFiles",
    ],
)

gentbl_cc_library(
    name = "DialectIncGen",
    tbl_outs = [
        (
            [
                "-gen-dialect-decls",
                "-dialect=zmir",
            ],
            "Dialect.inc.h",
        ),
        (
            [
                "-gen-dialect-defs",
                "-dialect=zmir",
            ],
            "Dialect.inc.cpp",
        ),
    ],
    tblgen = "@llvm-project//mlir:mlir-tblgen",
    td_file = ":Ops.td",
    deps = [":TdFiles"],
)

gentbl_cc_library(
    name = "OpsIncGen",
    tbl_outs = [
        (
            ["-gen-op-decls"],
            "Ops.inc.h",
        ),
        (
            ["-gen-op-defs"],
            "Ops.inc.cpp",
        ),
    ],
    tblgen = "@llvm-project//mlir:mlir-tblgen",
    td_file = ":Ops.td",
    deps = [":TdFiles"],
)

gentbl_cc_library(
    name = "TypesIncGen",
    tbl_outs = [
        (
            ["-gen-typedef-decls"],
            "Types.inc.h",
        ),
        (
            ["-gen-typedef-defs"],
            "Types.inc.cpp",
        ),
    ],
    tblgen = "@llvm-project//mlir:mlir-tblgen",
    td_file = ":Types.td",
    deps = [":TdFiles"],
)

gentbl_cc_library(
    name = "AttrsIncGen",
    tbl_outs = [
        (
            ["-gen-attrdef-decls",
             "-attrdefs-dialect=zmir"],
            "Attrs.inc.h",
        ),
        (
            ["-gen-attrdef-defs",
             "-attrdefs-dialect=zmir"],
            "Attrs.inc.cpp",
        ),
    ],
    tblgen = "@llvm-project//mlir:mlir-tblgen",
    td_file = ":Attrs.td",
    deps = [":TdFiles"],
)

cc_library(
    name = "IR",
    srcs = [
        "Dialect.cpp",
        "Ops.cpp",
        "Types.cpp",
    ],
    hdrs = [
        "Dialect.h",
        "Attrs.h",
        "Ops.h",
        "Types.h"
    ],
    deps = [
        ":AttrsIncGen",
        ":DialectIncGen",
        ":OpsIncGen",
        ":TypesIncGen",
        "@llvm-project//mlir:IR",
        "@llvm-project//mlir:InferTypeOpInterface",
        "@llvm-project//mlir:FuncDialect",
        "@llvm-project//mlir:IndexDialect",
        "@llvm-project//mlir:SCFDialect",
        "@zirgen//zirgen/Dialect/ZHL/IR",
    ],
)
