load("@llvm-project//mlir:tblgen.bzl", "gentbl_cc_library", "td_library")

package(
    default_visibility = ["//visibility:public"],
)

td_library(
    name = "PassesTdFiles",
    srcs = ["Passes.td"],
    deps = [
        "@llvm-project//mlir:OpBaseTdFiles",
        "@llvm-project//mlir:RewritePassBaseTdFiles",
    ],
)

gentbl_cc_library(
    name = "PassesIncGen",
    tbl_outs = [
        (
            ["-gen-pass-decls"],
            "Passes.inc.h",
        ),
    ],
    tblgen = "@llvm-project//mlir:mlir-tblgen",
    td_file = ":Passes.td",
    deps = [
        ":PassesTdFiles",
        "@llvm-project//mlir:PassBaseTdFiles",
    ],
)

cc_library(
    name = "passes",
    srcs = [
        "InjectBuiltIns.cpp",
        "PassDetail.h",
        "SplitComponentBody.cpp",
        "RemoveIllegalOps.cpp"
    ],
    hdrs = [
        "Passes.h",
    ],
    deps = [
        ":PassesIncGen",
        "@zirgen//zirgen/Dialect/ZHL/IR",
        "@llvm-project//mlir:Transforms",
        "//ZirToZkir/Dialect/ZMIR/BuiltIns",  
        "//ZirToZkir/Dialect/ZMIR/IR",  
        "@llvm-project//mlir:FuncDialect",
    ],
)
