
package(
    default_visibility = ["//visibility:public"],
)

cc_library(
  name = "ZMIRTypeConverter",
  srcs = [
    "ZMIRTypeConverter.cpp",
  ],
  hdrs = [
    "ZMIRTypeConverter.h",
  ],
  deps = [
        "@zirgen//zirgen/Dialect/ZHL/IR",
        "//ZirToZkir/Dialect/ZMIR/IR",  
        "//ZirToZkir/Passes:PassDetail",  
        "@llvm-project//mlir:FuncDialect",
        "@llvm-project//mlir:SCFDialect",
        "@llvm-project//mlir:IndexDialect",
        "@llvm-project//mlir:Transforms"
  ]
)
