
package(
    default_visibility = ["//visibility:public"],
)

cc_library(
  name = "ZMIRTypeConverter",
  srcs = [
    "ZMIRTypeConverter.cpp",
    "Materialize.cpp"
  ],
  hdrs = [
    "ZMIRTypeConverter.h",
    "Materialize.h"
  ],
  deps = [
        "@zirgen//zirgen/Dialect/ZHL/IR",
        "//ZirToZkir/Dialect/ZMIR/IR",  
        "//ZirToZkir/Passes:PassDetail",  
        "//ZirToZkir/Dialect/ZHL/Typing:TypeBindings",
        "@llvm-project//mlir:FuncDialect",
        "@llvm-project//mlir:SCFDialect",
        "@llvm-project//mlir:IndexDialect",
        "@llvm-project//mlir:Transforms"
  ]
)
